apps/truenas-plex-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas-plex-service
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 32400
    targetPort: 32400

---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-plex-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.179
    ports:
      - port: 32400

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: plex.erix-homelab.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: truenas-plex-service
            port:
              number: 32400
  tls:
  - secretName: erix-homelab-site-tls
    hosts:
    - plex.erix-homelab.site
